--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/store": "^7.4.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
     "ng-zorro-antd": "^7.2.0",
     "rxjs": "~6.4.0",
